# LibyuvSample

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ConstDefine.h  LibyuvUtil.cpp  LibyuvUtil.h  native-bridge.cpp
app/src/main/java/com/sharry/sample/libyuv/: LibyuvUtil.java  MainActivity.kt
app/src/main/jniLibs/include/libyuv/: mjpeg_decoder.h  planar_functions.h  rotate.h  scale_argb.h  scale_row.h
gradle/wrapper/: gradle-wrapper.properties
